--- a/birote.html
+++ b/birote.html
@@ -7,12 +7,12 @@ Panadería Alondra Bibliografía
 <body>
 
 <hr size="4" color="black"><h1> <marquee>Panadería Alondra... Since 1982</marquee> </h1> <hr size="4" color="pink">
-<h2> </h2>
-<h1>  </h2>
+<h2>La panadería inicio como una pequeña idea ya hace 40 años y desde entonces ha pasado por muchos cambios, este negocio no es solo una forma de ganar dinero, sino tmabién un legado familiar el cual estará vigente por muchos años más </h2>
+<h1> Orgullosamente de Sonora y cada vez mejoraremos nuestro sefvicio </h1>
 
 <h4>Desde 1984 hacemos historia</h4>
-<IMG src="cortadillo.jpg" width=300 height=300>
-<li><a href="Panadería.html">1. Página Principal</a></li>
+<IMG src="quaso.jpg" width=300 height=300>
+<li><a href="Index.html">1. Página Principal</a></li>
 <li><a href="puertas.html">2. Introducción </a></li>
 <li><a href="cortadillo.html">3. Objetivo</a></li>
 <li><a href="pandevieja.html">4. Desarrollo</a></li>
