--- a/cortadillo.html
+++ b/cortadillo.html
@@ -10,14 +10,14 @@ Panadería Alondra Objetivo
 <h2> </h2>
 <h1> El objetivo que tenemos con esta página web es volvernos una opción más atractiva al momento de encontrar esta página  </h1>
 <h2> Igual que la masa madre hay que estar bonita desde el comienzo y creemos que este diseño es el más adecuado, pues los cortadillos son el mejor tipo de pan y el diseño lo representa de esa forma</h2>
-<IMG src="cortadillo.jpg" width=300 height=300>
+<IMG src="pane.jpg" width=300 height=300>
 <h4>Nuestro objetivo es ser la mejor opción</h4>
-<li><a href="Panadería.html">1. Página Principal</a></li>
+<li><a href="Index.html">1. Página Principal</a></li>
 <li><a href="puertas.html">2. Introducción </a></li>
-<li><a href="desarrollo.html">3. Desarrollo</a></li>
-<li><a href="conclusiones.html">4. Conclusiones</a></li>
-<li><a href="bibliografia.html">5. Bibliografía</a></li>
-<li><a href="productos.html">6. Productos</a></li>
+<li><a href="pandevieja.html">3. Desarrollo</a></li>
+<li><a href="torcido.html">4. Conclusiones</a></li>
+<li><a href="birote.html">5. Bibliografía</a></li>
+<li><a href="dona.html">6. Productos</a></li>
 </ul>
 
 <body bgcolor=#fff9bf>
