--- a/dona.html
+++ b/dona.html
@@ -16,9 +16,9 @@ Panadería Alondra Productos
 <li>6. y muchos más que puedes encontrar en nuestra tienda o por pedidos</a></li>
 </ul>
 
-<IMG src="cortadillo.jpg" width=300 height=300> <IMG src="cortadillo.jpg" width=300 height=300> <IMG src="cortadillo.jpg" width=300 height=300> <IMG src="cortadillo.jpg" width=300 height=300>
+<IMG src="ban.jpg" width=300 height=300> <IMG src="virginia.jpg" width=300 height=300> <IMG src="pandulce.jpg" width=300 height=300> <IMG src="Bread.jpg" width=300 height=300>
 <h4>Esperamos sea de su agrado</h4>
-<li><a href="Panadería.html">1. Página Principal</a></li>
+<li><a href="Index.html">1. Página Principal</a></li>
 <li><a href="puertas.html">2. Introducción </a></li>
 <li><a href="cortadillo.html">3. Objetivo</a></li>
 <li><a href="pandevieja.html">4. Desarrollo</a></li>
@@ -26,7 +26,6 @@ Panadería Alondra Productos
 <li><a href="birote.html">6. Bibliografía</a></li>
 </ul>
 
-<h4>Desde 1984 estamos ofreciendo el mejor servicio respecto a panadería, con una amplia selección de panes en tienda y a pedidos, por eso para expandirnos y alcanzar a aquel público hemos decidido hacer esta página web y con ustedes nuestro equipo... como portavoz y nombre de la panadería <u>ALONDRA MAGNA</u> como la repartidora y panadera por excelencia y su hermana la gran panadera... <u>LUCERO DUARTE</u> y por último y no menos importante, LA BELLA, LA PRECIOSA Y PARTE MÁS IMPORTANTE <u>TRIANAAA DEEEESHIREEEE</u> </h4>
 <body bgcolor=#fff9bf>
 <body text=black>
 </body>
