--- a/pandevieja.html
+++ b/pandevieja.html
@@ -10,14 +10,14 @@ Panadería Alondra Desarrollo
 <h2>Necesidades actuales </h2>
 <h1>Promocionar nuestra panadería y tener un mayor alcance, somos un equipo unido que busca el éxito comercial y la satisfacción del cliente  </h1>
 <h4>Aquí desarrollamos el mejor pan</h4>
-<li><a href="Panadería.html">1. Página Principal</a></li>
+<li><a href="Index.html">1. Página Principal</a></li>
 <li><a href="puertas.html">2.Introducción </a></li>
 <li><a href="cortadillo.html">3. Objetivo</a></li>
-<li><a href="conclusiones.html">4. Conclusiones</a></li>
-<li><a href="bibliografia.html">5. Bibliografía</a></li>
-<li><a href="productos.html">6. Productos</a></li>
+<li><a href="torcido.html">4. Conclusiones</a></li>
+<li><a href="birote.html">5. Bibliografía</a></li>
+<li><a href="dona.html">6. Productos</a></li>
 </ul>
-<IMG src="cortadillo.jpg" width=300 height=300>
+<IMG src="brod.jpg" width=300 height=300>
 <body bgcolor=#fff9bf>
 <body text=black>
 </body>
