--- a/torcido.html
+++ b/torcido.html
@@ -10,12 +10,12 @@ Panadería Alondra Conclusiones
 <IMG src="cortadillo.jpg" width=300 height=300>
 
 <h4>Esperamos acompañe con un buen vaso de leche al concluir su pan, las conclusiones generales terminaron en que fue un reto, pues hubieron códigos rotos y la parte del lanzamiento nos costó bastante tiempo, al final valió la pena y dimos un gran trabajo</h4>
-<li><a href="Panadería.html">1. Página Principal</a></li>
+<li><a href="Index.html">1. Página Principal</a></li>
 <li><a href="puertas.html">2. Introducción </a></li>
 <li><a href="cortadillo.html">3. Objetivo </a></li>
 <li><a href="pandevieja.html">4. Desarrollo</a></li>
-<li><a href="bibliografia.html">5. Bibliografía</a></li>
-<li><a href="productos.html">6. Productos</a></li>
+<li><a href="birote.html">5. Bibliografía</a></li>
+<li><a href="dona.html">6. Productos</a></li>
 </ul>
 
 
