--- a/puertas.html
+++ b/puertas.html
@@ -8,10 +8,10 @@ Panadería Alondra Introducción
 
 <hr size="4" color="black"><h1> <marquee>Panadería Alondra... Since 1982</marquee> </h1> <hr size="4" color="pink">
 <h1> Lo que comenzó como un negocio pequeño y local en Obregón, ahora se ha convertido en una panadería bien puesta y con productos bonitos, buenos y baratos  </h1>
-<IMG src="cortadillo.jpg" width=300 height=300>
+<IMG src="Alo.jpg" width=300 height=300>
 <h2>Creemos que tras tantos años ha sido momento de dar otro paso adelanto y continuar con este legado de varias generaciones. Panadería Alondra es y seguirá siendo un negocio familiar el cual se esfuerza por dar el mejor servicio y productos.</h2>
 <h4>La primera mordida es la más importante</h4>
-<li><a href="Panadería.html">1. Página Principal</a></li>
+<li><a href="Index.html">1. Página Principal</a></li>
 <li><a href="cortadillo.html">2. Objetivo </a></li>
 <li><a href="pandevieja.html">3. Desarrollo</a></li>
 <li><a href="torcido.html">4. Conclusiones</a></li>
